# Freddy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
freddy/: main.py
freddy/bot/: bot.py
freddy/bot/exts/: fun.py  help.py  information.py  mod.py
freddy/utils/: config.py  constants.py  converters.py  helpers.py
